js function added

--- a/manifest.json
+++ b/manifest.json
@@ -11,4 +11,12 @@
         'default_title': 'Search',
         'default_popup': 'popup.html'
     },
+	'content_scripts': 
+	[
+		{
+			"matches": ["*://*/*"],
+			"js": ["content_script.js"],
+			"run_at": "document_end"
+		}
+    ]
 }
