--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,15 @@
 {
-    'name': 'Hey Joe',
-    'version': '0.1',
-    'manifest_version': 2,
-    'description': 'Jimi all by my side',
-    'icons': {
-        '128' : 'icon.png'
-    },
-    'browser_action': {
-        'default_icon': 'icon.png',
-        'default_title': 'Search',
-        'default_popup': 'popup.html'
-    },
+	"manifest_version": 2,
+	"name": "Name-Swap",
+	"version": "1.0",
+	"description": "Replaces certain text",
+	"content_scripts": 
+	[
+		{
+			"matches": ["*://*/*"],
+			"js": ["content_script.js"],
+			"run_at": "document_end"
+		}
+	]
 }
+
